<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_showResults"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_showResults"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_showResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText_beer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_searchBeer"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/layout_brewed"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_brewed"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/textView_brewed"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editText_brewed"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:hint="@string/hint_monthYear"
                android:maxLength="7"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="14sp"
                android:inputType="date" />


            <TextView
                android:id="@+id/textView_to"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textView_to"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editText_to"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:hint="@string/hint_monthYear"
                android:maxLength="7"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="14sp"
                android:inputType="date" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_highPoint"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textView_highPoint"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>